--- a/curso js/exe2/exe3.html
+++ b/curso js/exe2/exe3.html
@@ -33,6 +33,10 @@
         var s = n1 + n2
             //Aqui foi usado templyt sttreem para melhorar os codigos
         window.alert(`As Somas entre ${n1} e ${n2} é igual a ${s}`)
+            //podemos usar de tag no JS
+            //s.length, pra saber quantos caracteres tem a string.
+            //s.toUpperCase(), pra deixar a string em letras maiuscula.
+            //s.toLowerCase(),pra deixar a string em letras minusculas.
     </script>
 </body>
 
