--- a/curso js/exe14/exe14.html
+++ b/curso js/exe14/exe14.html
@@ -10,15 +10,17 @@
 
 </head>
 
-<body>
+<body onload="carregar()">
     <header>
         <h1>Hora Do Dia</h1>
     </header>
     <main style="display: flex;">
         <section>
-            <p>Agora são 9 horas.</p>
-            <div class="img" style="display: flex;">
-                <img src="imagens/m.png" alt="img">
+            <div id="msg">
+                <p>Agora são 9 horas.</p>
+            </div>
+            <div id="img" style="display: flex;">
+                <img src="n.png" alt="img">
             </div>
         </section>
     </main>
