--- a/curso js/exe14/exe14.html
+++ b/curso js/exe14/exe14.html
@@ -20,7 +20,7 @@
                 <p>Agora são 9 horas.</p>
             </div>
             <div id="img" style="display: flex;">
-                <img src="n.png" alt="img">
+                <img id="foto" src="n.png" alt="img">
             </div>
         </section>
     </main>
