--- a/curso js/exe17/index.html
+++ b/curso js/exe17/index.html
@@ -12,29 +12,30 @@
 
 <body>
     <header>
-        <h1>Verificador de Idade</h1>
+        <h1>Vamos Contar</h1>
     </header>
-    <main style="display: flex;">
-        <section>
-            <div id="t1">
-                <p class="1">Ano de Nascimento:
-                    <input type="number" name="txtano" id="txtano" min="0">
+
+    <section style="display: flex;">
+        <div id="p">
+            <div>
+                <p class="p1">Inicio:
+                    <input type="number" name="inicio" id="txti" min="0">
                 </p>
-                <p class="p2">Sexo:
-                    <input type="radio" name="radsex" id="masc" checked>
-                    <label for="masc">Masculino</label>
-                    <input type="radio" name="radsex" id="fem">
-                    <label for="fem">Feminino</label>
+                <p class="p1">Fim:
+                    <input type="number" name="fim" id="txtf " min="0">
                 </p>
-                <p class="p3">
-                    <input type="button" value="Verificar" onclick="verificar()">
+                <p class="p1">Passo:
+                    <input type="number" name="passo" id="txtp" min="0">
+                </p>
+                <p class="p1">
+                    <input type="button" value="Contar" onclick="contar()">
                 </p>
             </div>
             <div id="res">
-                Preencha os dados acima para ver o resultado!
+                <p>Preparando resultado.....</p>
             </div>
-        </section>
-    </main>
+        </div>
+    </section>
     <footer>
         <div class="roda">
             <p><a href="https://www.youtube.com/c/CursoemVídeo" target="_blank"><strong>&copy;CursoemVideo</strong></a></p>
